# KTB4-jung-AI

./: .gitignore  README.md  ocr_noise_cleaner.py  pyproject.toml
01/01/: input.md
01주차/01번 과제/: ocr_noise_cleaner.py
02주차/01번 과제/: .gitignore  main.py  pyproject.toml
02주차/01번 과제/data/: comments.json  posts.json
02주차/01번 과제/routers/: comment_router.py  post_router.py
02주차/01번 과제/schemas/: __init__.py  comment.py  post.py
02주차/01번 과제/services/: comment_service.py  post_service.py
02주차/02번 과제/: .gitignore  database.py  main.py  pyproject.toml
02주차/02번 과제/models/: __init__.py  comment.py  post.py
02주차/02번 과제/routers/: comment_router.py  post_router.py
02주차/02번 과제/schemas/: __init__.py  comment.py  post.py
02주차/02번 과제/services/: comment_service.py  post_service.py
05주차/01번 과제/: 1.dog_cat_classifier.ipynb  1.dog_cat_classifier.py  pyproject.toml  train.py
05주차/02번 과제/: 2.vgg16_transfer.ipynb  2.vgg16_transfer.py  REPORT.md  pyproject.toml
05주차/02번 과제/results/: results.json
05주차/03번 과제/: 3.resnet_vs_vgg16.ipynb  3.resnet_vs_vgg16.py  REPORT.md
05주차/03번 과제/results/: results.json
05주차/04번 과제/: 4.hyperparam_tuning.ipynb  REPORT.md
07주차/: chunk_markdown.py  chunks.json  chunks.jsonl  extract_qa.py  kakao-tech-bootcamp-rag-qa-set.csv  kakao-tech-bootcamp-rag-qa-set.md  kakao-tech-bootcamp-rules-for-rag.md
07주차/01번 과제/: test_main.py
07주차/01번 과제/app/api/: endpoints.py
07주차/01번 과제/app/core/: llm.py
07주차/01번 과제/app/schemas/: rag.py
07주차/01번 과제/app/services/: rag.py
07주차/01번 과제/app/templates/: chat.html
