[project]
name = "ktb4-jung-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.5",
    "langchain-classic>=1.0.8",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.1",
]
